# gasstorm

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  PRODUCT.md  README.md  REVIEW-2026-01-22.md  SYNCING_RECOVERY_PLAN.md  blockbuilder-performance.md  docker-compose-base.yaml  docker-compose-besu-cdk-erigon-bridge.yaml  docker-compose-besu-l1.yaml  docker-compose-cdk-erigon-bridge.yaml  docker-compose-cdk-erigon.yaml  docker-compose-external-l1.yaml  docker-compose-gasless.yaml  docker-compose-gravity-reth.yaml  docker-compose-op-reth.yaml  docker-compose-privacy-explorer-cdk.yaml  docker-compose-privacy-explorer.yaml  docker-compose.build.yaml  docker-compose.override.yaml.example  docker-compose.yml  nonce.md  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  styleguide.md  todo-now.md  todo.md  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
bridge-ui/: .dockerignore  .env.example  Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
config/: aggkit.toml  agglayer.toml  bridge-service.toml  explorer-l1-nginx.conf  explorer-nginx.conf  external-l1-entrypoint.sh  external-l1-proxy.conf.template  featured-networks.json  hyperlane-relayer.json  init-agglayer-db.sql  jwt.hex  op-succinct.env
configs/: core-config-l2.yaml  core-config.yaml  warp-config.yaml
dashboard/: .dockerignore  Dockerfile  README.md  next.config.ts  nginx-cdk.conf  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  (+2 more)
zisk-prover/guest/: Cargo.toml
zisk-prover/guest/src/: main.rs
(+347 files in other folders)
