[package]
name = "zisk-stf"
version = "0.1.0"
edition = "2021"

[dependencies]
# ZisK runtime
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git" }

# EVM execution
revm = { version = "19", default-features = false, features = ["std"] }

# Ethereum types
alloy-primitives = { version = "0.8", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bincode = { version = "1.3", default-features = false }

# Crypto (pure Rust - no acceleration)
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha3 = { version = "0.10", default-features = false }

[profile.release]
opt-level = 3
lto = true
